<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeff.calculator.MainScreen">

    <ImageView
        android:id="@+id/backgroundOP"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/opback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/addition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="plus"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="@+id/backgroundOP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toTopOf="@+id/backgroundOP" />

    <TextView
        android:id="@+id/subtraction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="sub"
        android:text="@string/sub"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_column="0"
        app:layout_constraintEnd_toEndOf="@+id/backgroundOP"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/addition"
        app:layout_row="1" />

    <TextView
        android:id="@+id/multiplication"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="mult"
        android:text="@string/mult"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_column="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/subtraction"
        app:layout_row="2" />

    <TextView
        android:id="@+id/division"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="div"
        android:text="@string/div"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_column="0"
        app:layout_constraintEnd_toEndOf="@+id/backgroundOP"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/multiplication"
        app:layout_row="3" />

    <TextView
        android:id="@+id/equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:onClick="equal"
        android:text="@string/eq"
        android:textAlignment="center"
        android:textSize="55sp"
        app:layout_column="0"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundOP"
        app:layout_constraintEnd_toEndOf="@+id/backgroundOP"
        app:layout_constraintStart_toEndOf="@+id/numbers"
        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_row="4" />

    <TextView
        android:id="@+id/inputDisplay"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif"
        android:textAlignment="textEnd"
        android:textSize="45sp"
        android:autoSizeMinTextSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#708090"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dot"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="dot"
            android:text="@string/dot"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/zero"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="zero"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/one"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="uno"
            android:text="@string/one"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="two"
            android:text="@string/two"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="three"
            android:text="@string/three"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="2"
            app:layout_row="3" />

        <TextView
            android:id="@+id/four"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="four"
            android:text="@string/four"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/five"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="five"
            android:text="@string/five"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/six"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="six"
            android:text="@string/six"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/seven"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="seven"
            android:text="@string/seven"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/eight"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="eight"
            android:text="@string/eight"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_row="1" />

        <TextView
            android:id="@+id/nine"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:onClick="nine"
            android:text="@string/nine"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="45sp"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/Delete"
            android:onClick="delete"
            android:scaleType="center"
            android:textAlignment="center"
            app:layout_column="2"
            app:layout_row="4"
            app:srcCompat="@android:drawable/ic_input_delete" />

    </android.support.v7.widget.GridLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/numbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDisplay">

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>
